--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URL=mongodb+srv://novotek:rJHer8T4KIc251tO@lms.7xovznb.mongodb.net/lms?retryWrites=true&w=majority
+MONGO_URL=mongodb://127.0.0.1:27017/school-system
